@@ -92,6 +92,7 @@ import uk.gov.hmcts.reform.prl.models.dto.hearings.Hearings;
 import uk.gov.hmcts.reform.prl.models.dto.judicial.JudicialUsersApiRequest;
 import uk.gov.hmcts.reform.prl.models.dto.judicial.JudicialUsersApiResponse;
 import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
+import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentResponse;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentServiceResponse;
 import uk.gov.hmcts.reform.prl.models.user.UserRoles;
 import uk.gov.hmcts.reform.prl.models.wa.AdditionalProperties;
@@ -129,6 +130,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
+import static java.util.Objects.nonNull;
 import static java.util.Optional.ofNullable;
 import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
@@ -140,6 +142,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE_OF_APPLICATION;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COMMA;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_NAME;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CURRENT_ORDER_A_DRAFT_ORDER;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CUSTOM_C21_ORDER_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CUSTOM_C43_ORDER_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CUSTOM_ORDER_NAME_OPTION;
@@ -224,6 +227,7 @@ import static uk.gov.hmcts.reform.prl.utils.ManageOrdersUtils.isHearingPageNeede
 @SuppressWarnings({"java:S3776", "java:S6204"})
 public class ManageOrderService {
 
+    private static final String CASE_ID_HAS_SERVE_TO_RESPONDENT_OPTIONS = "case id {} has serveToRespondentOptions = {}";
     public static final String IS_THE_ORDER_ABOUT_CHILDREN = "isTheOrderAboutChildren";
 
     public static final String IS_THE_ORDER_ABOUT_ALL_CHILDREN = "isTheOrderAboutAllChildren";
@@ -272,6 +276,7 @@ public class ManageOrderService {
     public static final String AND = " and";
 
     public static final String CIR_DOCUMENTS_REQUESTED = "cirDocumentsRequested";
+
 
     @Value("${document.templates.common.prl_sdo_draft_template}")
     protected String sdoDraftTemplate;
@@ -723,7 +728,7 @@ public class ManageOrderService {
                     .findFirst()
                     .orElse(null);
             }
-            values.add(selectedOrder != null ? selectedOrder : orderList.getListItems().get(0));
+            values.add(selectedOrder != null ? selectedOrder : orderList.getListItems().getFirst());
             orderList = orderList.toBuilder().value(values).build();
             log.info("populateServeOrderDetails: auto-selected order with id={}",
                 selectedOrder != null ? newOrderId : "fallback to index 0");
@@ -1232,7 +1237,7 @@ public class ManageOrderService {
                 .map(Element::getValue).toList();
 
             List<String> applicantSolicitorNames = applicants.stream()
-                .map(party -> Objects.nonNull(party.getSolicitorOrg().getOrganisationName())
+                .map(party -> nonNull(party.getSolicitorOrg().getOrganisationName())
                     ? party.getSolicitorOrg().getOrganisationName() + APPLICANT_SOLICITOR
                     : APPLICANT_SOLICITOR)
                 .toList();
@@ -1295,7 +1300,7 @@ public class ManageOrderService {
         //AHR - Admin creating a final order (applies to createAnOrder and createCustomOrder with noCheck)
         if (!newOrderDetails.isEmpty()
             && isEligibleForAutomatedHearing(caseData.getManageOrders().getOrdersHearingDetails())) {
-            Element<OrderDetails> firstOrder = newOrderDetails.get(0);
+            Element<OrderDetails> firstOrder = newOrderDetails.getFirst();
             newOrderDetails.set(0, element(firstOrder.getId(), firstOrder.getValue().toBuilder()
                 .isAutoHearingReqPending(Yes).build()));
         }
@@ -1316,10 +1321,11 @@ public class ManageOrderService {
         if (Yes.equals(caseData.getServeOrderData().getDoYouWantToServeOrder())) {
             orderCollection = serveOrder(caseData, orderCollection);
         }
-        LocalDateTime currentOrderCreatedDateTime = newOrderDetails.get(0).getValue().getDateCreated();
+        LocalDateTime currentOrderCreatedDateTime = newOrderDetails.getFirst().getValue().getDateCreated();
         Map<String, Object> orderMap = new HashMap<>();
         orderMap.put("currentOrderCreatedDateTime", currentOrderCreatedDateTime);
         orderMap.put(ORDER_COLLECTION, orderCollection);
+        orderMap.put(CURRENT_ORDER_A_DRAFT_ORDER, false);
         return orderMap;
     }
 
@@ -1338,7 +1344,7 @@ public class ManageOrderService {
         if (StringUtils.isNotBlank((currentOrderId))) {
             newOrderDetails.set(
                 0,
-                element(UUID.fromString(currentOrderId), newOrderDetails.get(0).getValue())
+                element(UUID.fromString(currentOrderId), newOrderDetails.getFirst().getValue())
             );
         }
     }
@@ -1374,7 +1380,7 @@ public class ManageOrderService {
         caseData = caseData.toBuilder().draftOrderCollection(draftOrderList).build();
         return Map.of(
             DRAFT_ORDER_COLLECTION,
-            caseData.getDraftOrderCollection());
+            caseData.getDraftOrderCollection(), CURRENT_ORDER_A_DRAFT_ORDER, true);
     }
 
     public DraftOrder getCurrentCreateDraftOrderDetails(CaseData caseData, String loggedInUserType, UserDetails userDetails) {
@@ -1416,6 +1422,7 @@ public class ManageOrderService {
                               .build())
             .isTheOrderByConsent(caseData.getManageOrders().getIsTheOrderByConsent())
             .dateOrderMade(caseData.getDateOrderMade())
+            .checkIsThisUrgent(caseData.getManageOrders().getCheckIsThisUrgent())
             .approvalDate(caseData.getApprovalDate())
             .wasTheOrderApprovedAtHearing(caseData.getWasTheOrderApprovedAtHearing())
             .judgeOrMagistrateTitle(caseData.getManageOrders().getJudgeOrMagistrateTitle())
@@ -1588,6 +1595,7 @@ public class ManageOrderService {
                               .reviewRequiredBy(caseData.getManageOrders().getAmendOrderSelectCheckOptions()) //PRL-4854
                               .build())
             .dateOrderMade(caseData.getDateOrderMade())
+            .checkIsThisUrgent(caseData.getManageOrders().getCheckIsThisUrgent())
             .approvalDate(caseData.getApprovalDate())
             .judgeNotes(caseData.getJudgeDirectionsToAdmin())
             .orderSelectionType(orderSelectionType)
@@ -1679,6 +1687,7 @@ public class ManageOrderService {
         return orders;
     }
 
+    @SuppressWarnings("unchecked")
     private void servedFL401Order(CaseData caseData, List<Element<OrderDetails>> orders, Element<OrderDetails> order,
                                   boolean isMultipleOrdersServed) {
         YesOrNo otherPartiesServed = No;
@@ -1714,7 +1723,7 @@ public class ManageOrderService {
                     .applicantLegalRepresentative.getDisplayedValue() + ")");
             }
         } else {
-            log.info("case id {} has serveToRespondentOptions = {}", caseData.getId(), caseData.getManageOrders().getServeToRespondentOptions());
+            log.info(CASE_ID_HAS_SERVE_TO_RESPONDENT_OPTIONS, caseData.getId(), caseData.getManageOrders().getServeToRespondentOptions());
 
         }
         servedOrderDetails.put(SERVED_PARTIES, servedParties);
@@ -1742,9 +1751,11 @@ public class ManageOrderService {
         return servedParties;
     }
 
+
+    @SuppressWarnings("unchecked")
     private void servedC100Order(CaseData caseData, List<Element<OrderDetails>> orders, Element<OrderDetails> order, boolean isMultipleOrdersServed) {
         YesNoNotApplicable serveOnRespondent = caseData.getManageOrders().getServeToRespondentOptions();
-        Element<PartyDetails> partyDetailsElement = caseData.getApplicants().get(0);
+        Element<PartyDetails> partyDetailsElement = caseData.getApplicants().getFirst();
         String serveRecipientName = null;
         if (null != partyDetailsElement.getValue().getRepresentativeFullName()) {
             serveRecipientName =  partyDetailsElement.getValue().getRepresentativeFullName();
@@ -1757,7 +1768,7 @@ public class ManageOrderService {
         } else if (YesNoNotApplicable.No.equals(serveOnRespondent)) {
             recipients = getRecipients(caseData);
         } else if (YesNoNotApplicable.NotApplicable.equals(serveOnRespondent)) {
-            log.info("case id {} has serveToRespondentOptions = {}", caseData.getId(), caseData.getManageOrders().getServeToRespondentOptions());
+            log.info(CASE_ID_HAS_SERVE_TO_RESPONDENT_OPTIONS, caseData.getId(), caseData.getManageOrders().getServeToRespondentOptions());
         }
 
         String otherParties;
@@ -1931,6 +1942,7 @@ public class ManageOrderService {
         return recipients;
     }
 
+    @SuppressWarnings("unchecked")
     private static void updateServedOrderDetails(Map<String, Object> servedOrderDetails, String cafcassCymruEmail, List<Element<OrderDetails>> orders,
                                                  Element<OrderDetails> order, List<Element<PostalInformation>> postalInformation,
                                                  List<Element<EmailInformation>> emailInformation) {
@@ -2107,7 +2119,7 @@ public class ManageOrderService {
     private void updateDocmosisAttributes(String authorisation,
                                           CaseData caseData,
                                           Map<String, Object> caseDataUpdated,
-                                          Map<String, String> fieldsMap) throws Exception {
+                                          Map<String, String> fieldsMap) {
         GeneratedDocumentInfo generatedDocumentInfo;
         DocumentLanguage documentLanguage = documentLanguageService.docGenerateLang(caseData);
         if (documentLanguage.isGenEng()) {
@@ -2291,9 +2303,9 @@ public class ManageOrderService {
     public CaseData getN117FormData(CaseData caseData, String language) {
 
         PartyDetails applicant1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
-            ? caseData.getApplicants().get(0).getValue() : caseData.getApplicantsFL401();
+            ? caseData.getApplicants().getFirst().getValue() : caseData.getApplicantsFL401();
         PartyDetails respondent1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
-            ? caseData.getRespondents().get(0).getValue() : caseData.getRespondentsFL401();
+            ? caseData.getRespondents().getFirst().getValue() : caseData.getRespondentsFL401();
         ManageOrders orderData = caseData.getManageOrders().toBuilder()
             .manageOrdersCaseNo(String.valueOf(caseData.getId()))
             .recitalsOrPreamble(caseData.getManageOrders().getRecitalsOrPreamble())
@@ -2334,16 +2346,13 @@ public class ManageOrderService {
 
     public CaseData populateCustomOrderFields(CaseData caseData, CreateSelectOrderOptionsEnum order, String language) {
 
-        switch (order) {
-            case amendDischargedVaried, occupation, nonMolestation, powerOfArrest, blank:
-                return getFl404bFields(caseData, language);
-            case generalForm:
-                return getN117FormData(caseData, language);
-            case noticeOfProceedings:
-                return getFL402FormData(caseData, language);
-            default:
-                return caseData;
-        }
+        return switch (order) {
+            case amendDischargedVaried, occupation, nonMolestation, powerOfArrest, blank ->
+                getFl404bFields(caseData, language);
+            case generalForm -> getN117FormData(caseData, language);
+            case noticeOfProceedings -> getFL402FormData(caseData, language);
+            default -> caseData;
+        };
     }
 
     public CaseData getFl404bFields(CaseData caseData, String language) {
@@ -2354,10 +2363,10 @@ public class ManageOrderService {
 
             PartyDetails applicant1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
                 && CollectionUtils.isNotEmpty(caseData.getApplicants())
-                ? caseData.getApplicants().get(0).getValue() : caseData.getApplicantsFL401();
+                ? caseData.getApplicants().getFirst().getValue() : caseData.getApplicantsFL401();
             PartyDetails respondent1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
                 && CollectionUtils.isNotEmpty(caseData.getRespondents())
-                ? caseData.getRespondents().get(0).getValue() : caseData.getRespondentsFL401();
+                ? caseData.getRespondents().getFirst().getValue() : caseData.getRespondentsFL401();
             orderData = orderData.toBuilder()
                 .fl404bCaseNumber(String.valueOf(caseData.getId()))
                 .fl404bCourtName(caseData.getCourtName())
@@ -2542,6 +2551,7 @@ public class ManageOrderService {
                            .c21OrderOptions(caseData.getManageOrders().getC21OrderOptions())
                            .selectChildArrangementsOrder(caseData.getManageOrders().getSelectChildArrangementsOrder())
                            .childArrangementsOrdersToIssue(caseData.getManageOrders().getChildArrangementsOrdersToIssue())
+                           .checkIsThisUrgent(caseData.getManageOrders().getCheckIsThisUrgent())
                            .finalisationDetails(finalisationDetailsService.buildFinalisationDetails(caseData))
                            .childOption(getChildOption(caseData))
                            .isOrderUploaded(No)
@@ -2618,7 +2628,7 @@ public class ManageOrderService {
         if (launchDarklyClient.isFeatureEnabled(ROLE_ASSIGNMENT_API_IN_ORDERS_JOURNEY)) {
             //This would check for roles from AM for Judge/Legal advisor/Court admin
             //if it doesn't find then it will check for idam roles for rest of the users
-            RoleAssignmentServiceResponse roleAssignmentServiceResponse = null;
+            RoleAssignmentServiceResponse roleAssignmentServiceResponse;
             try {
                 roleAssignmentServiceResponse = roleAssignmentApi.getRoleAssignments(
                     authorisation,
@@ -2631,8 +2641,8 @@ public class ManageOrderService {
                 throw e;
             }
 
-            List<String> roles = roleAssignmentServiceResponse.getRoleAssignmentResponse().stream().map(role -> role.getRoleName()).collect(
-                Collectors.toList());
+            List<String> roles = roleAssignmentServiceResponse.getRoleAssignmentResponse().stream().map(
+                RoleAssignmentResponse::getRoleName).toList();
 
             if (roles.stream().anyMatch(InternalCaseworkerAmRolesEnum.JUDGE.getRoles()::contains)
                 || roles.stream().anyMatch(InternalCaseworkerAmRolesEnum.LEGAL_ADVISER.getRoles()::contains)) {
@@ -2683,7 +2693,7 @@ public class ManageOrderService {
             if (judicialUsers == null || judicialUsers.isEmpty()) {
                 return null;
             }
-            JudicialUsersApiResponse judgeDetails = judicialUsers.get(0);
+            JudicialUsersApiResponse judgeDetails = judicialUsers.getFirst();
             if (judgeDetails.getAppointments() == null || judgeDetails.getAppointments().isEmpty()) {
                 return null;
             }
@@ -2694,21 +2704,6 @@ public class ManageOrderService {
         }
     }
 
-    private JudgeOrMagistrateTitleEnum mapAppointmentToJudgeTitle(String appointmentName, String postNominals) {
-        if (appointmentName == null) {
-            return null;
-        }
-        return switch (appointmentName.toLowerCase()) {
-            case "circuit judge" -> JudgeOrMagistrateTitleEnum.circuitJudge;
-            case "district judge" -> JudgeOrMagistrateTitleEnum.districtJudge;
-            case "district judge (magistrates' court)" -> JudgeOrMagistrateTitleEnum.districtJudgeMagistratesCourt;
-            case "deputy circuit judge" -> JudgeOrMagistrateTitleEnum.deputyCircuitJudge;
-            case "deputy district judge" -> JudgeOrMagistrateTitleEnum.deputyDistrictJudge;
-            case "recorder" -> JudgeOrMagistrateTitleEnum.recorder;
-            case "high court judge", "deputy high court judge" -> mapHighCourtJudgeByGender(postNominals);
-            default -> null;
-        };
-    }
 
     private JudgeOrMagistrateTitleEnum mapHighCourtJudgeByGender(String postNominals) {
         if (postNominals == null) {
@@ -2746,8 +2741,8 @@ public class ManageOrderService {
             userDetails.getId()
         );
         List<String> roles = roleAssignmentServiceResponse.getRoleAssignmentResponse().stream()
-            .map(role -> role.getRoleName())
-            .collect(Collectors.toList());
+            .map(RoleAssignmentResponse::getRoleName)
+            .toList();
 
         if (roles.stream().anyMatch(InternalCaseworkerAmRolesEnum.JUDGE.getRoles()::contains)) {
             loggedInUserType = UserRoles.JUDGE.name();
@@ -2791,7 +2786,6 @@ public class ManageOrderService {
      * Syncs custom order field values to their pre-existing equivalents for Check Your Answers display.
      * Also clears sub-selections for non-selected order types.
      */
-    @SuppressWarnings("unchecked")
     public void syncCustomOrderFieldsToPreExisting(Map<String, Object> caseDataUpdated) {
         Object customOrderNameOptionObj = caseDataUpdated.get(CUSTOM_ORDER_NAME_OPTION);
         String customOrderNameOption = customOrderNameOptionObj != null ? customOrderNameOptionObj.toString() : null;
@@ -2923,7 +2917,7 @@ public class ManageOrderService {
         Map<String, Object> caseDataUpdated = callbackRequest.getCaseDetails().getData();
         List<DynamicMultiselectListElement> selectedServedOrderList = caseData.getManageOrders().getServeOrderDynamicList().getValue();
         if (selectedServedOrderList != null && selectedServedOrderList.size() == 1
-            && selectedServedOrderList.get(0).getLabel().contains(C_47_A)) {
+            && selectedServedOrderList.getFirst().getLabel().contains(C_47_A)) {
             caseDataUpdated.put(IS_ONLY_C_47_A_ORDER_SELECTED_TO_SERVE, Yes);
         } else {
             caseDataUpdated.put(IS_ONLY_C_47_A_ORDER_SELECTED_TO_SERVE, No);
@@ -3159,7 +3153,7 @@ public class ManageOrderService {
                 List<JudicialUsersApiResponse> judicialUsers = refDataUserService.getAllJudicialUserDetails(request);
 
                 if (CollectionUtils.isNotEmpty(judicialUsers)) {
-                    JudicialUsersApiResponse judgeDetails = judicialUsers.get(0);
+                    JudicialUsersApiResponse judgeDetails = judicialUsers.getFirst();
 
                     // Use surname if available (more accurate than full name)
                     if (StringUtils.isNotEmpty(judgeDetails.getSurname())) {
@@ -3191,7 +3185,7 @@ public class ManageOrderService {
         }
 
         // Get the first appointment's title
-        String appointment = judgeDetails.getAppointments().get(0).getAppointment();
+        String appointment = judgeDetails.getAppointments().getFirst().getAppointment();
         if (StringUtils.isEmpty(appointment)) {
             return null;
         }
@@ -3290,7 +3284,7 @@ public class ManageOrderService {
                     JudicialUsersApiRequest.builder()
                         .personalCode(personalCodes).build());
                 if (CollectionUtils.isNotEmpty(judicialUsersApiResponses)) {
-                    judgeFullName = judicialUsersApiResponses.get(0).getFullName();
+                    judgeFullName = judicialUsersApiResponses.getFirst().getFullName();
                 }
             } catch (FeignException e) {
                 log.error("User details not found for personal code {}", personalCodes, e);
@@ -3567,7 +3561,7 @@ public class ManageOrderService {
                 .filter(elem -> null != elem.getValue().getHearingDateConfirmOptionEnum()).toList();
 
             if (hearingsWithOptionsSelected.size() == 1) {
-                hearingOptionSelected =  hearingList.get(0).getHearingDateConfirmOptionEnum().toString();
+                hearingOptionSelected =  hearingList.getFirst().getHearingDateConfirmOptionEnum().toString();
                 isMultipleHearingSelected = NO;
             } else if (hearingsWithOptionsSelected.size() > 1) {
                 hearingOptionSelected = WA_MULTIPLE_OPTIONS_SELECTED_VALUE;
@@ -4023,8 +4017,9 @@ public class ManageOrderService {
         String judgeLaReviewRequired = null;
         String performingUser = null;
         String performingAction = null;
-        String orderNameForWA = null;
+        String orderNameForWA;
         Map<String, Object> waFieldsMap = new HashMap<>();
+        waFieldsMap.put(WA_ORDER_COLLECTION_ID, newDraftOrderCollectionId);
         ManageOrdersOptionsEnum manageOrdersOption = caseData.getManageOrdersOptions();
         log.info("setFieldsForWaTask: manageOrdersOptions={}, createSelectOrderOptions={}, eventId={}",
             manageOrdersOption, caseData.getCreateSelectOrderOptions(), eventId);
@@ -4070,6 +4065,7 @@ public class ManageOrderService {
             } else if (null != performingUser && performingUser.equalsIgnoreCase(UserRoles.JUDGE.toString())) {
                 log.info("setFieldsForWaTask: setting WA_ORDER_NAME_JUDGE_CREATED={}", orderNameForWA);
                 waFieldsMap.put(WA_ORDER_NAME_JUDGE_CREATED, orderNameForWA);
+                waFieldsMap.put(WA_ORDER_COLLECTION_ID, newDraftOrderCollectionId);
             }
             log.info("setFieldsForWaTask: performingUser={}, orderNameForWA={}", performingUser, orderNameForWA);
         } else {
@@ -4097,12 +4093,19 @@ public class ManageOrderService {
     }
 
     public void orchestrateCirDocumentsRequestedTask(CaseData caseData, String authorisation) {
+        orchestrateCirDocumentsRequestedTask(caseData, authorisation, null);
+    }
+
+    public void orchestrateCirDocumentsRequestedTask(CaseData caseData, String authorisation, UUID draftOrderCollectionId) {
         LocalDate localAuthorityReportFiledByDate = caseData.getServeOrderData()
             .getWhenReportsMustBeFiledByLocalAuthority();
         LocalDate cafcassReportFiledByDate = caseData.getServeOrderData().getWhenReportsMustBeFiled();
         if (featureToggleService.isCreateRequestCirUpdateTaskEnabled()) {
             Map<String, Object> waFieldsMap = new HashMap<>();
             waFieldsMap.put(WA_PERFORMING_USER, getLoggedInUserType(authorisation));
+            if (nonNull(draftOrderCollectionId)) {
+                waFieldsMap.put(WA_ORDER_COLLECTION_ID, draftOrderCollectionId);
+            }
             waFieldsMap.put(IS_CIR_UPDATE_FOLLOW_UP, null);
             setFieldsForCirDocumentsRequestedForLaWaTask(caseData, waFieldsMap);
             setFieldsForCirDocumentsRequestedForCafcassWaTask(caseData, waFieldsMap);
